--- a/src/search/search.html
+++ b/src/search/search.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <div id="root"></div>
+    <script>${require('raw-loader!../node_modules/lib-flexible/flexible.js')}</script>
 </body>
 </html>
