--- a/src/index/index.html
+++ b/src/index/index.html
@@ -1,16 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    ${require('raw-loader!./meta.html')}
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    ${ require('raw-loader!./meta.html')}
     <title>Document</title>
+    <script>${ require('raw-loader!babel-loader!../../node_modules/lib-flexible/flexible.js')}</script>
 </head>
 <body>
-    <% for(var k in htmlWebpackPlugin.files.chunks){ %>
-    <% if(k!=='main'){ %>
-    <script src="<%= htmlWebpackPlugin.files.chunks[k].entry %>"></script>
-    <% } %>
-<% } %>
 </body>
 </html>
