代码分割 js懒加载

--- a/src/search/index.html
+++ b/src/search/index.html
@@ -5,14 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= htmlWebpackPlugin.options.title %></title>
     <script>
-        ${require("raw-loader!babel-loader!../../node_modules/lib-flexible/flexible.js")}
+        // ${require("raw-loader!babel-loader!../../node_modules/lib-flexible/flexible.js")}
       </script>
 </head>
 <body>
     <div id="root"></div>
 </body>
 <script>
-    var json = JSON.parse('<%= JSON.stringify(htmlWebpackPlugin)%>')
-    console.log(json)
     </script>
 </html>
